<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name_label" />

    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_label" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:onClick="onImageButtonClick" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_button_hint" />

</LinearLayout>