<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:background="#808080"
        android:textColor="#000000"
        />

    <CheckBox
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxText"
        />

    <ImageButton
        android:id="@+id/imagebutton"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        />

    <Switch
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/imagebutton"
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"
        />

    <EditText
        android:layout_below="@+id/imagebutton"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText"
        android:inputType="textPersonName"
        />

</RelativeLayout>
