<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp"
        android:layout_columnSpan="2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/ButtonText"
        android:layout_columnSpan="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/CheckBoxText"
        android:layout_columnSpan="1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:src="@drawable/flag"
        android:layout_columnSpan="1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/SwitchText"
        android:layout_columnSpan="1" />

    <EditText
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EditText"
        android:inputType="textPersonName"
        android:layout_columnSpan="2" />

</GridLayout>
